# pico_ePaper_IDE

./: .gitignore  CMakeLists.txt  ImageData.c  ImageData.h  Lenna.xcf  README.md  bmp2Monopic.py  main.c  wifi.h
.devcontainer/: Dockerfile  devcontainer.json
